--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Dum3bi
 url: http://dum3bi.com
-description: Insert tagline here
+description: Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria.
 
 collections:
   portfolio:
